Changelog
=========

1.22 - Unreleased
-----------------

* Allow configuration of the number of threads used through the buildout config
  by setting the ``mr.developer-threads`` option in the ``buildout`` section.
  [fschulze]

* For git repositories the ``status`` command shows you when your local branch
  is ahead of the remote branch.
  [fschulze]

* Always make ``sources-dir`` option available in buildout, even if it's set
  to the default. Fixes #49
  [fschulze]

* Parse revision from url for all svn commands. Fixes #37
  [fschulze]

* Use entry points to allow adding and overwriting working copy types via
  addon packages.
  [fschulze]

* Fixed ValueError in verbose status for filesystem and gitsvn sources.
  [maurits]

* Fixed some exceptions occurring when using with Python 3.
  [icemac]

* On Windows, use the PATHEXT environment variable to find the git executable.
  [kleist]

1.21 - 2012-04-11
-----------------

* Added ``threads`` option to ``[mr.developer]`` section to set number of
  threads used for running checkouts.
  [fschulze]

* Read a per user config file from ~/.buildout/mr.developer.cfg in addition to
  the regular .mr.developer.cfg in the current buildout base.
  [fschulze]

* Python 3 support by using 2to3.
  [mitchellrj (Richard Mitchell)]

1.20 - 2012-02-26
-----------------

* Git: Added ``pushurl`` option
  [iElectric (Domen Kožar)]

* Refactored thread locking.
  [shywolf9982]

* Refactored search for git executable and version handling.
  [shywolf9982]

* In the status command report unknown packages with '?' when no
  package-regexp has been given.
  [maurits]

* Added --force option to purge command.  Especially helpful in
  purging non-subversion packages, which otherwise we refuse to
  remove.  Fixes issue #71.
  [maurits]

* Do not depend on `elementtree` if there is `xml.etree` (Python >= 2.5).

* Don't set locale anymore when calling ``svn``. This may break if the output